# frigatebird

./: .complex_sorted_insertions.md.swp  .gitignore  .gitmodules  .more_changes.md.swp  .mvcc-change-1.md.swp  .performance.swp  Cargo.toml  IOhandlerchanges.md  LICENSE  Makefile  PIPELINE_MIGRATION_PLAN.md  TEST_COVERAGE.md  TEST_FLUME_GLOMMIO.md  blog.md  changessss.md  complex_sorted_insertions.md  consistency_modes.md  debug_log.txt  debug_out.out  digest.txt  do.md  entry.md  ethos.md  executor.md  innocent_file.txt  low_hanging_fruits.md  more_changes.md  more_queries.md  mvcc-change-1.md  mvcc-change-2  performance  query_planner.md  readme.md  select_query_support.md  sql_parser.md  table_metadata_store.md   test_tcp_worker_pool.rs
_includes/: head_custom.html
additional_docs/: changes.md  entry.md  middle_entry_insertions.md  more_changes.md  page.md  sorted_operations_design.md  transactions_and_MVCC.md  wal.md  writer.md
benchmarks/: README.md  high_volume.rs
docs/: CLAUDE.md  README.md  _config.yml  architecture.md  architecture_overview.md  cache.md  columnar_batch.md  components.md  core_types.md  data-flow.md  executor.md  index.md  metadata_store.md  ops_handler.md  page_handler.md  pipeline.md  scan-vectorization-plan.md  scheduler.md  sorted_inserts.md  sql_executor.md  storage.md  system_overview.md  writer.md
examples/: dump_ast.rs
mem:/: accounts_id_page0  accounts_score_page0  agg_case_active_page0  agg_case_id_page0  agg_case_net_amount_page0  agg_case_price_page0  alternating_id_page0  alternating_val_page0  boundaries_id_page0  boundaries_val_page0  bulk_id_page0  (+109 more)
(+191 files in other folders)
