[package]
name = "idk_uwu_ig"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = "1.3"
lz4_flex = "0.11.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
libc = "0.2"
rkyv = { version = "0.7", features = ["validation", "strict"] }
sqlparser = "0.44"
crossbeam = "0.8.4"
crossbeam-skiplist = "0.1"
rand = "0.8"
chrono = "=0.4.31"

[dev-dependencies]
duckdb = { version = "0.10", features = ["bundled"] }
float-cmp = "0.10"
once_cell = "1.20"

[[bin]]
name = "high_volume_bench"
path = "benchmarks/high_volume.rs"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[[test]]
name = "sql_massive_correctness"
path = "tests/sql_massive_correctness/mod.rs"
