[package]
name = "frigatebird"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
bincode = "1.3"
lz4_flex = "0.11.5"
serde = { version = "1.0.219", features = ["derive"] }
libc = "0.2"
rkyv = { version = "0.7", features = ["validation", "strict"] }
memmap2 = "0.9"
sqlparser = "0.44"
crossbeam = "0.8.4"
rand = "0.8"
chrono = "0.4"
regex = "1"
clap = { version = "4", features = ["derive"] }
rustyline = "15"

[dev-dependencies]
duckdb = { version = "1.1", features = ["bundled"] }
float-cmp = "0.10"
once_cell = "1.20"
tempfile = "3"

[[bin]]
name = "high_volume_bench"
path = "benchmarks/high_volume.rs"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[[test]]
name = "sql_massive_correctness"
path = "tests/sql_massive_correctness/mod.rs"
